--- a/Search_ Algorithm/A_Star.ipynb
+++ b/Search_ Algorithm/A_Star.ipynb
@@ -7,107 +7,151 @@
    "outputs": [],
    "source": [
     "import heapq\n",
-    "import queue\n",
-    "class PriorityQueue:\n",
-    "    def __init__(self):\n",
+    "from builtins import property\n",
+    "from typing import Tuple, List, Dict, Iterator\n",
+    "\n",
+    "\n",
+    "class PriorityQueue(object):\n",
+    "    elements: List[int]\n",
+    "\n",
+    "    def __init__(self) -> None:\n",
     "        self.elements = []\n",
     "\n",
-    "    def empty(self):\n",
-    "        return len( self.elements ) == 0\n",
+    "    @property\n",
+    "    def empty(self) -> bool:\n",
+    "        return len(self.elements) == 0\n",
     "\n",
-    "    def put(self, item, priority):\n",
-    "        heapq.heappush( self.elements, (priority, item) )\n",
+    "    def put(self, item: Tuple[int, int], priority: int) -> None:\n",
+    "        heapq.heappush(self.elements, (priority, item))\n",
     "\n",
-    "    def get(self):\n",
-    "        return heapq.heappop( self.elements )[1]\n",
-    "\n",
-    "\n",
-    "\n",
-    "class Graph(object):\n",
-    "    def __init__(self):\n",
-    "        self.parent = {}\n",
-    "        self.cost = {}\n",
-    "        self._queue = PriorityQueue()\n",
-    "\n",
-    "    def A_star_search(self, diagram, start_node, goal_node):\n",
-    "        self._queue.put( start_node, 0 )\n",
-    "        self.parent[start_node] = None\n",
-    "        self.cost[start_node] = 0\n",
-    "        while not self._queue.empty():\n",
-    "            current = self._queue.get()\n",
-    "            if current == goal_node:\n",
-    "                break\n",
-    "            for child in diagram.neighbors(current):\n",
-    "                new_cost = self.cost[current] + diagram.get_cost(child )\n",
-    "                if self.bool_next_child(child, new_cost):\n",
-    "                    self.find_next_node( child, current, goal_node, new_cost )\n",
-    "        #print(self.parent)\n",
-    "        return self.parent, self.cost\n",
-    "\n",
-    "    def find_next_node(self, child, current, goal_node, new_cost):\n",
-    "        self.cost[child] = new_cost\n",
-    "        priority = new_cost + self.heuristic( goal_node, child )\n",
-    "        self._queue.put( child, priority )\n",
-    "        self.parent[child] = current\n",
-    "\n",
-    "    def bool_next_child(self, child, new_cost):\n",
-    "        return child not in self.cost or new_cost < self.cost[child]\n",
-    "\n",
-    "    def heuristic(self, start_node, destination_node):\n",
-    "        (x1, y1) = start_node\n",
-    "        (x2, y2) = destination_node\n",
-    "        return abs( x1 - x2 ) + abs( y1 - y2 )\n",
+    "    def get(self) -> Tuple[int, int]:\n",
+    "        return heapq.heappop(self.elements)[1]\n",
     "\n",
     "\n",
     "class Grid(object):\n",
-    "    def __init__(self, width, height):\n",
+    "\n",
+    "    width: int\n",
+    "    height: int\n",
+    "    walls: List[Tuple[int, int]]\n",
+    "    weights: Dict[Tuple[int, int], int]\n",
+    "\n",
+    "    def __init__(self, width: int, height: int) -> None:\n",
     "        self.width = width\n",
     "        self.height = height\n",
     "        self.walls = []\n",
     "        self.weights = {}\n",
     "\n",
-    "    def get_cost(self,destination_node):\n",
-    "        return self.weights.get( destination_node, 1 )\n",
+    "    def get_cost(self, destination_node: Tuple[int, int]) -> int:\n",
+    "        return self.weights.get(destination_node, 1)\n",
     "\n",
-    "    def neighbors(self, co_ordinate):\n",
-    "        x, y = co_ordinate\n",
-    "        results = [(x + 1, y), (x, y + 1), (x - 1, y), (x, y - 1)]\n",
-    "        return filter( self.bool_no_wall, filter( self.bool_valid_cocrdinate, results ) )\n",
+    "    def neighbors(self, co_ordinate: Tuple[int, int]) -> Iterator[Tuple[int, int]]:\n",
+    "        (x, y) = co_ordinate\n",
+    "        results: List[Tuple[int, int]] = [(x + 1, y), (x, y + 1), (x - 1, y), (x, y - 1)]\n",
+    "        return filter(self.bool_no_wall, filter(self.bool_valid_coordinate, results))\n",
     "\n",
-    "    def bool_valid_cocrdinate(self, co_ordinate):\n",
-    "        x, y = co_ordinate\n",
+    "    def bool_valid_coordinate(self, co_ordinate: Tuple[int, int]) -> bool:\n",
+    "        (x, y) = co_ordinate\n",
     "        return 0 <= x < self.width and 0 <= y < self.height\n",
     "\n",
-    "    def bool_no_wall(self, co_ordinate):\n",
+    "    def bool_no_wall(self, co_ordinate: Tuple[int, int]) -> bool:\n",
     "        return co_ordinate not in self.walls\n",
     "\n",
-    "def draw_tile(graph, co_ordinate, width, kargs):\n",
-    "    point = \".\"\n",
-    "    if 'cost' in kargs and co_ordinate in kargs['cost']:\n",
-    "        point = \"%d\" % kargs['cost'][co_ordinate]\n",
-    "    if 'parent' in kargs and kargs['parent'].get( co_ordinate, None ) is not None:\n",
+    "\n",
+    "def heuristic(start_node: Tuple[int, int], destination_node: Tuple[int, int]) -> int:\n",
+    "    (x1, y1) = start_node\n",
+    "    (x2, y2) = destination_node\n",
+    "    return abs(x1 - x2) + abs(y1 - y2)\n",
+    "\n",
+    "\n",
+    "class Graph(object):\n",
+    "    _queue: PriorityQueue\n",
+    "    cost: Dict[Tuple[int, int], int]\n",
+    "    parent: Dict[Tuple[int, int], Tuple[int, int]]\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.parent = {}\n",
+    "        self.cost = {}\n",
+    "        self._queue = PriorityQueue()\n",
+    "\n",
+    "    def a_star_search(self, diagram: Grid, start_node: Tuple[int, int], goal_node: Tuple[int, int]) -> \\\n",
+    "            Tuple[dict, dict]:\n",
+    "        self._queue.put(start_node, 0)\n",
+    "        self.parent[start_node] = (-1, -1)\n",
+    "        self.cost[start_node] = 0\n",
+    "        while not self._queue.empty:\n",
+    "            current: Tuple[int, int] = self._queue.get()\n",
+    "            if current == goal_node:\n",
+    "                break\n",
+    "            for child in diagram.neighbors(current):\n",
+    "                new_cost = self.cost[current] + diagram.get_cost(child)\n",
+    "                if self.bool_next_child(child, new_cost):\n",
+    "                    self.find_next_node(child, current, goal_node, new_cost)\n",
+    "        return self.parent, self.cost\n",
+    "\n",
+    "    def find_next_node(self, child, current, goal_node, new_cost) -> None:\n",
+    "        self.cost[child] = new_cost\n",
+    "        priority = new_cost + heuristic(goal_node, child)\n",
+    "        self._queue.put(child, priority)\n",
+    "        self.parent[child] = current\n",
+    "\n",
+    "    def bool_next_child(self, child, new_cost) -> bool:\n",
+    "        return child not in self.cost or new_cost < self.cost[child]\n",
+    "\n",
+    "\n",
+    "def draw_tile(graph, co_ordinate, draw_description: dict) -> str:\n",
+    "    point: str = \".\"\n",
+    "    if 'cost' in draw_description and co_ordinate in draw_description['cost']:\n",
+    "        point = \"%d\" % draw_description['cost'][co_ordinate]\n",
+    "    if 'parent' in draw_description and  draw_description['parent'].get(co_ordinate, None) is not None and 'path' not in draw_description:\n",
     "        (x1, y1) = co_ordinate\n",
-    "        (x2, y2) = kargs['parent'][co_ordinate]\n",
-    "        if x2 == x1 + 1: point = \">\"\n",
-    "        if x2 == x1 - 1: point = \"<\"\n",
-    "        if y2 == y1 + 1: point = \"v\"\n",
-    "        if y2 == y1 - 1: point = \"^\"\n",
-    "    if 'start' in kargs and co_ordinate == kargs['start']:\n",
+    "        (x2, y2) = draw_description['parent'][co_ordinate]\n",
+    "        if x2 == x1 + 1:\n",
+    "            point = \"<\"\n",
+    "        if x2 == x1 - 1:\n",
+    "            point = \">\"\n",
+    "        if y2 == y1 + 1:\n",
+    "            point = \"^\"\n",
+    "        if y2 == y1 - 1:\n",
+    "            point = \"v\"\n",
+    "    if 'start' in draw_description and co_ordinate == draw_description['start']:\n",
     "        point = \"St\"\n",
-    "    elif 'goal' in kargs and co_ordinate == kargs['goal']:\n",
+    "    elif 'goal' in draw_description and co_ordinate == draw_description['goal']:\n",
     "        point = \"En\"\n",
     "    elif co_ordinate in graph.walls:\n",
     "        point = \"#\"\n",
+    "    elif 'path' in draw_description and co_ordinate in draw_description['path'] :\n",
+    "        (x1, y1) = co_ordinate\n",
+    "        (x2, y2) = draw_description['parent'][co_ordinate]\n",
+    "        if x2 == x1 + 1:\n",
+    "            point = \"<\"\n",
+    "        if x2 == x1 - 1:\n",
+    "            point = \">\"\n",
+    "        if y2 == y1 + 1:\n",
+    "            point = \"^\"\n",
+    "        if y2 == y1 - 1:\n",
+    "            point = \"v\"\n",
+    "\n",
     "    return point\n",
     "\n",
-    "def draw_grid(graph, width=2, **kargs):\n",
+    "\n",
+    "def draw_grid(graph, **draw_description) -> None:\n",
     "    for y in range(graph.height):\n",
     "        for x in range(graph.width):\n",
-    "            print(\"%2s\"  % draw_tile(graph, (x, y), width, kargs), end=\" \")\n",
+    "            print(\"%2s\" % draw_tile(graph, (x, y), draw_description), end=\" \")\n",
     "        print()\n",
     "\n",
     "\n",
-    "grid = Grid( 10, 10 )\n",
+    "def Shortest_path(came_from: dict, start: Tuple[int, int], goal: Tuple[int, int]) -> List[int]:\n",
+    "    current = goal\n",
+    "    path = []\n",
+    "    while current != start:\n",
+    "        path.append(current)\n",
+    "        current = came_from[current]\n",
+    "    path.append(start) # optional\n",
+    "    path.reverse() # optional\n",
+    "    return path\n",
+    "\n",
+    "grid: Grid = Grid(10, 10)\n",
     "grid.walls = [(1, 7), (1, 8), (2, 7), (2, 8), (3, 7), (3, 8)]\n",
     "grid.weights = {loc: 5 for loc in [(3, 4), (3, 5), (4, 1), (4, 2),\n",
     "                                   (4, 3), (4, 4), (4, 5), (4, 6),\n",
@@ -116,12 +160,15 @@
     "                                   (5, 7), (5, 8), (6, 2), (6, 3),\n",
     "                                   (6, 4), (6, 5), (6, 6), (6, 7),\n",
     "                                   (7, 3), (7, 4), (7, 5)]}\n",
-    "start, goal = (2, 4), (4,9)\n",
-    "parent, cost = Graph().A_star_search( grid, start, goal )\n",
-    "draw_grid( grid, width=3, parent=parent, start=start, goal=goal )\n",
+    "start: Tuple[int, int] = (2, 4)\n",
+    "goal: Tuple[int, int] = (4, 9)\n",
+    "parent: dict = Graph().a_star_search(grid, start, goal)[0]\n",
+    "cost: dict = Graph().a_star_search(grid, start, goal)[1]\n",
+    "draw_grid(grid, parent=parent, start=start, goal=goal)\n",
     "print()\n",
-    "draw_grid( grid, width=3, cost=cost, start=start, goal=goal )\n",
-    "print()"
+    "draw_grid(grid, cost=cost, start=start, goal=goal)\n",
+    "print()\n",
+    "draw_grid( grid, parent = parent, start=start, goal=goal, path=Shortest_path( parent, start=(2, 4), goal=(4, 9) ) )"
    ]
   }
  ],
