--- a/Search_ Algorithm/A_Star.ipynb
+++ b/Search_ Algorithm/A_Star.ipynb
@@ -142,13 +142,12 @@
     "\n",
     "\n",
     "def Shortest_path(came_from: dict, start: Tuple[int, int], goal: Tuple[int, int]) -> List[int]:\n",
-    "    current = goal\n",
-    "    path = []\n",
+    "    current: Tuple[int, int] = goal\n",
+    "    path: List = []\n",
     "    while current != start:\n",
     "        path.append(current)\n",
     "        current = came_from[current]\n",
-    "    path.append(start) # optional\n",
-    "    path.reverse() # optional\n",
+    "    path.append(start)\n",
     "    return path\n",
     "\n",
     "grid: Grid = Grid(10, 10)\n",
